# kaggle-tfug-toxic-language

./: .gitignore  README.md  pyproject.toml
docs/: experiments.md
src/: creating_data_for_training.py  eda.py  formatting_submission.py  modeling_01.py  modeling_02.py  modeling_03.py  modeling_05.py  modeling_06.py  modeling_07.py  modeling_08.py  modeling_09.py  modeling_11.py  modeling_12.py  validating_datasets.py
